# tauri-ui

./: .gitignore  .oxlintrc.json  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.changeset/: README.md  battery-manage-commands.md  debug-panel-host-diagnostics.md  eleven-bulldogs-nail.md  few-crabs-kneel.md  few-dodos-trade.md  late-seahorses-kneel.md  metal-buckets-live.md  ninety-owls-wave.md
.github/workflows/: publish.yml  release-smoke-app.yml  release.yml
apps/docs/: .gitignore  .oxlintrc.json  README.md  components.json  package.json  proxy.ts  source.config.ts
apps/docs/app/: global.css  layout.tsx
apps/docs/app/(home)/: layout.tsx  page.client.tsx  page.tsx
apps/docs/app/docs/: layout.tsx
apps/docs/app/llms-full.txt/: route.ts
apps/docs/components/: PixelBlast.css  PixelBlast.jsx  mdx.tsx  pixel-blast.tsx
apps/docs/lib/: layout.shared.tsx  shared.ts  source.ts
apps/web/: package.json
scripts/: create-tauri-ui-test-lib.mjs  test-create-tauri-ui-full.mjs  test-create-tauri-ui-release.mjs  test-create-tauri-ui-simple.mjs
src/: index.ts  type.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: apple-music-demo.tsx  data.tsx  layout.tsx  page.tsx
src/app/examples/: layout.tsx
src/components/: examples-nav.tsx  greeting.tsx  icons.tsx  left-menu.tsx  menu.tsx  theme-provider.tsx  theme-toggle.tsx  titlebar.tsx
src/components/music/: album-artwork.tsx  menu.tsx  sidebar.tsx
src/components/ui/: alert.tsx  card.tsx  context-menu.tsx  dialog.tsx  navigation-menu.tsx  sheet.tsx  toast.tsx
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
templates/.shared/src-tauri/: Cargo.toml
templates/next/: .gitignore  LICENSE  README.md  components.json  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
templates/next/src-tauri/: tauri.conf.json
templates/sveltekit/: .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
templates/sveltekit/src/: app.d.ts  app.html
templates/sveltekit/src-tauri/: Cargo.toml  tauri.conf.json
templates/vite/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
templates/vite/src/: App.tsx  main.tsx
templates/vite/src-tauri/: Cargo.toml  tauri.conf.json
templates/viteuno/: README.md  index.html  package.json  pnpm-lock.yaml  preset.shadcn.ts  prettier.config.cjs  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
templates/viteuno/src/: main.tsx
(+430 files in other folders)
